--- a/index/top.html
+++ b/index/top.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="../style/top.css">
     </head>
     <body>
-        <a href="lottery.html"><img src="../img/top.png"></a>
+        <a href="lot-example3.html"><img src="../img/top.png"></a>
     </body>
 </html>
