index.html postition change

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>WorldCupSimulation</title>
-        <link rel="stylesheet" href="../style/top.css">
+        <link rel="stylesheet" href="./style/top.css">
     </head>
     <body>
-        <a href="lot-example3.html"><img src="../img/top.png"></a>
+        <a href="./index/lot-example3.html"><img src="./img/top.png"></a>
     </body>
 </html>
