match result page overview

--- a/index/lot-example3.html
+++ b/index/lot-example3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="image-container">
-    <img src="../img/common.png" alt="Your Photo">
+    <img src="../img/common.png" alt="top-image">
     <div class="table-overlay">
         <div id="lot"></div>
         <script src="../js/lot-example3.js"></script>
