--- a/index/group-example1.html
+++ b/index/group-example1.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Random Country Names</title>
-<link rel="stylesheet" href="../style/lot-example2.css">
+<link rel="stylesheet" href="../style/group-example1.css">
 </head>
 <body>
-  <div class="country-list">
-    <ul id="country"></ul>
-    <script src="../js/lot-example2.js"></script>
+  <div class="table-overlay">
+    <ul id="group"></ul>
+    <script src="../js/group-example1.js"></script>
   </div>
 </body>
 </html>
